[build-system]

requires = [
    "setuptools>=62.0.0",
    "setuptools_scm[toml]>=8.0.1",
    "wheel"
]
build-backend = 'setuptools.build_meta'

[project]
name = "xrayvisim"
description = "An open-source Python library for Fourier or synthesis X-Ray imaging instruments."
requires-python = ">=3.12"
readme = {file = "README.rst", content-type="text/x-rst"}
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
authors = [{name="Shane Maloney", email = "shane.maloney@dias.ie"}]
dependencies = [
    "astropy>=7.0.0",
    "packaging>=24.2",
    "numpy>=2.1",
    "scipy>=1.15",
    "xarray>=2024.7.0",
    "matplotlib>=3.10.0",
]
dynamic = ["version"]
keywords = ["solar", "physics", "solar", "sun", "x-rays"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
map = [
    "sunpy[map]>=7.0.0"
]
all = ["xrayvisim[map]"]
tests = [
    "pytest-astropy>=0.11.0",
    "pytest-mpl>=0.18.0",
    "pytest>=8.3.0",
    "pytest-xdist>=3.7.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-automodapi>=0.18.0",
    "packaging>=24.2",
    "sphinx-changelog>=1.6.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.7.0",
    "sphinx-gallery>=0.17.0",
    "sphinxext-opengraph>=0.10.0",
    "pydata-sphinx-theme>=0.16.0",
    "xrayvisim[all]"
]
dev = ["xrayvisim[tests,docs]"]


[project.urls]
Homepage = "https://xrayvision.readthedocs.io"
"Source Code" = "https://github.com/TCDSolar/xrayvision"
Download = "https://pypi.org/project/xrayvisim"
Documentation = "https://xrayvision.readthedocs.io/"
Changelog = "https://xrayvision.readthedocs.io/en/latest/whatsnew/changelog.html"
"Issue Tracker" = "https://github.com/TCDSolar/xrayvision/issues"


[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["any"]
provides = ["xrayvisim"]

[tool.setuptools.packages.find]
include = ["xrayvision*"]
exclude = ["xrayvision._dev*"]

[tool.setuptools.package-data]
xrayvisim = ["data/*"]

[tool.setuptools_scm]
version_file = "xrayvision/_version.py"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = "import-untyped"
allow_redefinition = true
exclude = "(^|/)tests/"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

# Don't infer types from unstubbed library source (astropy/scipy/sunpy have no py.typed);
# treat them as untyped like mypy's ignore_missing_imports does, rather than statically
# analysing their implementation.
useLibraryCodeForTypes = false

# Stop errors when third-party libraries lack types/stubs
reportMissingImports = "none"
reportMissingTypeStubs = "none"

# Corrected rules to silence "partially unknown" issues from external packages
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

# astropy's `Quantity[unit]` annotations (e.g. `Quantity[u.arcsec / u.pix]`) are a runtime-checked
# idiom for `@quantity_input`, not a real generic parameter; pyright can't parse the unit expression
# as a type and flags every occurrence, so this is disabled rather than rewriting the signatures.
reportInvalidTypeForm = "none"

ignore = [
    "**/tests/**",
]


[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/TCDSolar/xrayvision/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/TCDSolar/xrayvision/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/TCDSolar/xrayvision/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "xrayvision"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/TCDSolar/xrayvision/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true

