[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
doctest_optionflags= NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = -p no:warnings

[pylama]
skip = xrayvision/_sunpy_init.py,xrayvision/__init__.py,xrayvision/conftest.py,xrayvision/version.py,*setup_package.py,xrayvision/tests/*


[pylama:pyflakes]
builtins = _

[pylama:pycodestyle]
max_line_length = 100

[pylama:pydocstyle]
skip = test*.py
ignore=D212

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = xrayvision
description = Image reconstruction methods for Fouier type X-ray Telescopes
long_description = Image reconstruction methods for Fouier type X-ray Telescopes
author = SunPy Developers
author_email = 
license = BSD 3-Clause
url = http://sunpy.org
edit_on_github = False
github_project = sunpy/xrayvision
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = sunpy
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev

[entry_points]

astropy-package-template-example = packagename.example_mod:main

