[metadata]
name = xrayvision
author = Shane Maloney
author_email = shane.maloney@dias.ie
license = BSD 3-Clause
license_file = LICENSE.rst
url =
description =
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data=True
setup_requires = setuptools_scm
install_requires =
    sunpy[all]>=3.0.1

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-changelog
    sphinx-automodapi
    towncrier
    sunpy-sphinx-theme

[options.package_data]
xrayvision = data/*

[tool:pytest]
testpaths = "xrayvision" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  xrayvision/_sunpy_init*
  xrayvision/conftest.py
  xrayvision/*setup_package*
  xrayvision/tests/*
  xrayvision/*/tests/*
  xrayvision/extern/*
  xrayvision/version*
  */xrayvision/_sunpy_init*
  */xrayvision/conftest.py
  */xrayvision/*setup_package*
  */xrayvision/tests/*
  */xrayvision/*/tests/*
  */xrayvision/extern/*
  */xrayvision/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
