[metadata]
name = xrayvision
author = Shane Maloney
author_email = shane.maloney@dias.ie
license = BSD 3-Clause
license_files = LICENSE.rst
url =
description = An open-source Python library for Fourier or synthesis imaging of X-Rays.
long_description = file: README.rst
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data=True
setup_requires = setuptools_scm
install_requires =
    astropy>=3.4.1
    numpy>=1.17.0
    scipy>=1.3.0
[options.extras_require]
map =
    sunpy[map]>=3.1.0
test =
    matplotlib
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-changelog
    sphinx-automodapi
    sunpy-sphinx-theme

[options.package_data]
xrayvision = data/*

[tool:pytest]
testpaths = "xrayvision" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "xrayvision[/\]_dev" ".jupyter" ".history" "tools"
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    sunpy/data/sample.py,
    sunpy/extern/**,
    sunpy/__init__.py,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=sunpy/extern/,sunpy/cm/__init__.py,docs/conf.py,sunpy/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy
known_first_party = xrayvision
length_sort = False
length_sort_sections=stdlib
line_length = 100
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  xrayvision/_sunpy_init*
  xrayvision/conftest.py
  xrayvision/*setup_package*
  xrayvision/tests/*
  xrayvision/*/tests/*
  xrayvision/extern/*
  xrayvision/version*
  */xrayvision/_sunpy_init*
  */xrayvision/conftest.py
  */xrayvision/*setup_package*
  */xrayvision/tests/*
  */xrayvision/*/tests/*
  */xrayvision/extern/*
  */xrayvision/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
